# phpy

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine  LICENSE  README-CN.md  README.md  code-format.sh  composer.json  config.h.in~  config.m4  config.w32  format.sh  main.php  main.py  make.sh  package.xml  php_phpy.h  phpunit.xml  phpy.cc  phpy.json  requirements.txt  run-tests.php
.github/workflows/: phpunit.yml  pytest.yml  python.yml
.phpunit.cache/: test-results
docs/: README.md  benchmark.md  index.md  roadmap.md  再来一个二维码，张根硕
docs/benchmark/: dict.php  dict.py
docs/cn/: README.md  roadmap.md
docs/cn/benchmark/: dict.php
docs/cn/php/: build-on-windows.md  build.md  composer.md  core.md  exception.md  (+6 more)
docs/de/: .translate.json  README.md  benchmark.md  roadmap.md
docs/en/: .translate.json  README.md  benchmark.md  roadmap.md
docs/fr/: .translate.json  README.md  benchmark.md  roadmap.md
docs/ja/: .translate.json  README.md  benchmark.md  roadmap.md
docs/php/: build.md  composer.md  core.md  fn.md  int.md  object.md  tutorial.md
docs/python/: README.md  class.md  function.md  module.md  reference.md
docs/ru/: .translate.json  README.md  benchmark.md  roadmap.md
examples/: bytes.php  cuda.php  curl.php  ddddocr.php  deepseek.php  dict.php  dir.php  eval.php  eval_code.php  exec.php  fn.php  gradio.php  hasattr.php  iter.php  itertools-product.php  lib.php  list.php  new.php  nfft.php  numpy.php  os.php  pipeline.php  range.php  slice.php  stream.php  tk.php  tqdm.php  transformers.php  turtle.php  type.php  webview.php
examples/DearPyGui/: app.py  demo.php  first.php
examples/cef/: hello.php
examples/chatglm/: cli_demo.php  utils.php
examples/class/: Dog.php  animal.py  dynamic_new_class.php  proxy_class.php
examples/crash/: thread.php
examples/facade/: import.php
examples/fpm/: index.php  start.sh
examples/gradio/: client.py  first.php  first.py
examples/gtk/: build.php  gtk.php  test.glade
examples/import/: fun.py  test.php
examples/lib/: os.php
examples/llamaindex/: agent.php  func.py  starter.php
examples/magicgui/: hello.php
examples/matplotlib/: plot.php
examples/modelscope/: captcha.php
examples/named_fn/: pui.php  pui.py
examples/numpy/: slice.php
examples/paddlenlp/: test.php
examples/pygame/: circle.php  circle.py  main.php
examples/pytermtk/: hello.php  signal.php  slot_window.php
examples/python/: array.py  curl.py  gmp.py  main.php  main.py  redis.py  std.py  stream.py  string.py  swoole.py
examples/socket/: pysock.php  pysock2stream.php  server.py  stream2pysock.php  test.php
examples/wxPython/: hello.php
include/: phpy.h
lib/app/: user.py
lib/php/: bcmath.py  bz2.py  core.py  ctype.py  curl.py  date.py  dom.py  exif.py  fileinfo.py  filter.py  gd.py  gmp.py  hash.py  iconv.py  imagick.py  intl.py  json.py  libxml.py  mbstring.py  mongodb.py  mysqli.py  mysqlnd.py  openssl.py  pcntl.py  pcre.py  pdo.py  phar.py  posix.py  readline.py  redis.py  reflection.py  session.py  simplexml.py  soap.py  sockets.py  sodium.py  spl.py  sqlite3.py  std.py  swoole.py  (+8 more)
lib/phpy/: Annotation.php  Helper.php  Import.php  Inherit.php  PyAnnotation.php  PyArguments.php  PyClass.php  PyEnum.php  PyHelper.php  PyImport.php  PyInherit.php  PyNamedFn.php  facade.php  proxy.tpl
lib/python/: ast.php  base64.php  calendar.php  json.php  os.php  pickle.php  random.php  string.php  subprocess.php  sys.php  threading.php  tkinter.php  torch.php  uuid.php
src/bridge/: core.cc
src/php/: core.cc  dict.cc  error.cc  fn.cc  iter.cc  list.cc  module.cc  object.cc  operator.cc  sequence.cc  set.cc  str.cc  tuple.cc  type.cc
src/python/: array.cc  callable.cc  class.cc  module.cc  object.cc  reference.cc  resource.cc  string.cc
stubs/: phpy_core.stub.php  phpy_core_arginfo.h  phpy_dict.stub.php  phpy_dict_arginfo.h  phpy_error.stub.php  phpy_error_arginfo.h  phpy_fn.stub.php  phpy_fn_arginfo.h  phpy_iter.stub.php  phpy_iter_arginfo.h  phpy_list.stub.php  phpy_list_arginfo.h  phpy_module.stub.php  phpy_module_arginfo.h  phpy_object.stub.php  phpy_object_arginfo.h  phpy_sequence.stub.php  phpy_sequence_arginfo.h  phpy_set.stub.php  phpy_set_arginfo.h  phpy_str.stub.php  phpy_str_arginfo.h  phpy_tuple.stub.php  phpy_tuple_arginfo.h  phpy_type.stub.php  phpy_type_arginfo.h
tests/: README.md  __init__.py  bootstrap.php  test_array.py  test_class.py  test_object.py  test_set.py  test_stream.py  test_string.py  test_types.py
tests/lib/: Dog.php  MediumEnum.php  PhpyObject.php  TestClass.php  TestEnum.php  functions.php  init.php
tests/mock/: import.php
tests/phpunit/: BytesTest.php  CollectionsTest.php  CoreTest.php  DictTest.php  EvalTest.php  ExecTest.php  FnTest.php  IntTest.php  IterTest.php  ListTest.php  LocaleTest.php  ModuleTest.php  ObjectTest.php  OperatorTest.php  ProxyTest.php  SetTest.php  StrTest.php  TupleTest.php  TypeTest.php  ZendTest.php
tools/: gen-all-lib.php  gen-ext-class.php  gen-lib.php  gen-php-lib.php  gen-pymod.php  mem_leak.php
tools/src/: Generator.php  PackageCollector.php  PythonMetadata.php  Tool.php
tools/templates/: class.c  php-class.tpl  php-lib.tpl  py-mod.tpl  pymodule.tpl
(+502 files in other folders)
